Refactoring and Java 16 records.
TypePatternChronology, TypePatternVersion. Removal of JSON support.